--- a/style.css
+++ b/style.css
@@ -23,6 +23,73 @@ i,
     pointer-events: none;
 }
 
+.hide {
+    display: none !important;
+}
+
+.btn {
+    cursor: pointer;
+    font-family: 'Anek Gujarati', sans-serif;
+    font-weight: 200;
+    border-radius: 7px;
+    padding: .5rem 5rem;
+    transition: background-color .5s ease;
+    border: none;
+    font-size: 1.75rem;
+}
+
+/* helloDiv */
+.hello-div {
+    z-index: 20;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.hello-div-shadow {
+    background-color: rgba(0, 0, 0, 0.7);
+    height: 100%;
+    width: 100%;
+}
+
+.hello-div-box {
+    position: absolute;
+    background-color: white;
+    border-radius: .5rem;
+    text-align: center;
+    display: grid;
+    align-content: center;
+    padding: 3rem;
+    margin: 1rem;
+}
+
+.hello-div-box input {
+    text-align: center;
+    margin: 2rem 0;
+    font-size: 1.5rem;
+}
+
+.userName-button {
+    background-color: #0a1a2b;
+    color: white;
+}
+
+.userName-button:hover {
+    background-color: #274058;
+}
+
+.error-input {
+    border: 1px solid red;
+}
+
+
+
+/* header */
 header {
     background: #0a1a2b;
     position: sticky;
@@ -69,7 +136,7 @@ form input {
     border: none;
     padding: .9rem;
     padding-bottom: .5rem;
-    align-content: center;
+    /* align-content: center; */
     outline: none;
 }
 
@@ -81,14 +148,14 @@ form input,
     max-width: 1100px;
 }
 
-form button {
+.todo-add {
     cursor: pointer;
     background: white;
-    color: #486686;
+    color: rgb(13 35 83);
     transition: color 0.5s ease;
 }
 
-form button:hover {
+.todo-add:hover {
     color: rgb(80, 97, 136);
 }
 
@@ -171,7 +238,17 @@ form button:hover {
 
 }
 
+.clear-data-btn {
+    margin: auto;
+    display: block;
+    background-color: rgb(138, 44, 44);
+    color: white;
+    margin-top: 3rem;
+}
 
+.clear-data-btn:hover {
+    background-color: rgb(163, 73, 73);
+}
 
 /* footer */
 footer {
@@ -199,62 +276,4 @@ footer i {
 
 footer li:hover i {
     color: rgb(65, 85, 107);
-}
-
-
-/* helloDiv */
-.hello-div {
-    z-index: 20;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.hello-div-shadow {
-    background-color: rgba(0, 0, 0, 0.7);
-    height: 100%;
-    width: 100%;
-}
-
-.hello-div-box {
-    position: absolute;
-    background-color: white;
-    border-radius: .5rem;
-    text-align: center;
-    display: grid;
-    align-content: center;
-    padding: 3rem;
-    margin: 1rem;
-}
-
-.hello-div-box input {
-    text-align: center;
-    margin: 2rem 0;
-    font-size: 1.5rem;
-}
-
-.userName-button {
-    background-color: #0a1a2b;
-    color: white;
-    border-radius: 1rem;
-    padding: 0 5rem;
-    transition: background-color .5s ease;
-}
-
-.userName-button:hover {
-    background-color: #274058;
-    color: white;
-}
-
-.error-input {
-    border: 1px solid red;
-}
-
-.hide {
-    display: none;
 }
